# coursework

./: CMakeLists.txt
Pieces/: qtpiece.cpp  qtpiece.h
include/: Board.h  Move.h  Pieces.h  SquareValues.h
lib/: Board.cpp  Move.cpp  a.out  evaluation.cpp  move_generation.cpp  search.cpp
src/: main.cpp  mainwindow.cpp  mainwindow.h  startmenu.cpp  startmenu.h  textboard.cpp
